--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"license": "MIT",
 	"author": "Vimlan Ganesan",
 	"scripts": {
-		"dev": "next dev",
+		"dev": "next dev -p 8080",
 		"build": "next build",
 		"export": "next build && next export",
-		"start": "next start",
+		"start": "next start -p 8080",
 		"lint": "next lint"
 	},
 	"dependencies": {
