--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 GOOGLE_CLIENT_ID=991539628736-0f80ttv3n3iaq6srb90080787m8e2nur.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=2MMY8Yk38JbfEYzQ1AjfAJ26
-NEXTAUTH_URL=http://localhost:8080
+NEXTAUTH_URL=https://myputih-ikf4a.ondigitalocean.app/
 PORT=8080
