--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 	"dependencies": {
 		"@headlessui/react": "^1.3.0",
 		"@heroicons/react": "^1.0.2",
+		"@prisma/client": "^2.27.0",
+		"axios": "^0.21.1",
 		"leaflet": "^1.7.1",
 		"next": "10.0.3",
 		"next-auth": "^3.27.3",
@@ -22,7 +24,8 @@
 		"prisma": "^2.27.0",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
-		"react-leaflet": "^3.0.4"
+		"react-leaflet": "^3.0.4",
+		"react-number-format": "^4.6.4"
 	},
 	"devDependencies": {
 		"@tailwindcss/custom-forms": "^0.2.1",
