--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
 		"react-leaflet": "^3.0.4",
+		"react-leaflet-markercluster": "^3.0.0-rc1",
 		"react-number-format": "^4.6.4"
 	},
 	"devDependencies": {
