saving to database completed

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server (Preview) and MongoDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://dbmyputih:fsam45yzn63pzavo@app-8d651f33-fd00-47bf-81f1-e6be975f0d64-do-user-9531161-0.b.db.ondigitalocean.com:25060/dbmyputih?sslmode=require"
+DATABASE_URL="postgresql://doadmin:viofrlp9yyw3lzjg@app-8d651f33-fd00-47bf-81f1-e6be975f0d64-do-user-9531161-0.b.db.ondigitalocean.com:25060/defaultdb?sslmode=require"
